cargo_check_workspace_fix2.txt
cargo :     Checking cowork-gui v0.1.0 (D:\Workspace\toys\cowork-forge\crates\cowork-gui\src-tauri)
At line:1 char:64
+ ... ys\cowork-forge\crates\cowork-gui\src-tauri; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking co...-gui\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `Cursor`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:8:15
  |
8 | use std::io::{Cursor, Read};
  |               ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Method`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:9:52
  |
9 | use tiny_http::{Server, Response, Request, Header, Method, StatusCode};
  |                                                    ^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\cowork-gui\src-tauri\src\project_manager.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `gui_types::*`
  --> crates\cowork-gui\src-tauri\src\lib.rs:21:5
   |
21 | use gui_types::*;
   |     ^^^^^^^^^^^^

warning: unused import: `cowork_core::agents::iterative_assistant::*`
   --> crates\cowork-gui\src-tauri\src\lib.rs:421:9
    |
421 |     use cowork_core::agents::iterative_assistant::*;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cowork_core::llm::ModelConfig`
   --> crates\cowork-gui\src-tauri\src\lib.rs:422:9
    |
422 |     use cowork_core::llm::ModelConfig;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::path::Path`
    --> crates\cowork-gui\src-tauri\src\lib.rs:1483:9
     |
1483 |     use std::path::Path;
     |         ^^^^^^^^^^^^^^^

warning: unused import: `cowork_core::llm::ModelConfig`
    --> crates\cowork-gui\src-tauri\src\lib.rs:1484:5
     |
1484 | use cowork_core::llm::ModelConfig;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> crates\cowork-gui\src-tauri\src\project_runner.rs:176:13
    |
176 |         let mut process = {
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `workspace`
   --> crates\cowork-gui\src-tauri\src\lib.rs:674:10
    |
659 |     let workspace = state.workspace_path.lock()
    |         --------- move occurs because `workspace` has type `std::sync::MutexGuard<'_, std::option::Option<std::string::String>>`, which does no
t implement the `Copy` trait
...
665 |         drop(workspace);
    |              --------- value moved here
...
674 |     drop(workspace);
    |          ^^^^^^^^^ value used here after move

warning: unused import: `Read`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:8:23
  |
8 | use std::io::{Cursor, Read};
  |                       ^^^^

warning: unused variable: `session_id`
  --> crates\cowork-gui\src-tauri\src\gui_commands.rs:87:5
   |
87 |     session_id: String,
   |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `session_id`
   --> crates\cowork-gui\src-tauri\src\gui_commands.rs:151:5
    |
151 |     session_id: String,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`

warning: unused variable: `session_id`
   --> crates\cowork-gui\src-tauri\src\project_runner.rs:202:41
    |
202 |     pub async fn execute_command(&self, session_id: String, command: String) -> Result<String, String> {
    |                                         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`

warning: variable does not need to be mutable
   --> crates\cowork-gui\src-tauri\src\project_manager.rs:404:19
    |
404 |         if let Ok(mut entries) = fs::read_dir(&workspace.join(".cowork").join("sessions")) {
    |                   ----^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: unused variable: `window`
   --> crates\cowork-gui\src-tauri\src\lib.rs:418:5
    |
418 |     window: Window,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `session_id_clone`
   --> crates\cowork-gui\src-tauri\src\lib.rs:553:9
    |
553 |     let session_id_clone = new_session_id.clone();
    |         ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id_clone`

warning: unused variable: `state`
   --> crates\cowork-gui\src-tauri\src\lib.rs:869:5
    |
869 |     state: State<'_, AppState>,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

For more information about this error, try `rustc --explain E0382`.
warning: `cowork-gui` (lib) generated 17 warnings
error: could not compile `cowork-gui` (lib) due to 1 previous error; 17 warnings emitted
